# netbox-device-groups

./: .dockerignore  .flake8  .gitignore  .markdownlint.json  404.html  LICENSE  README.md  code.code-workspace  index.html  mkdocs.yml  poetry.toml  pyproject.toml  sitemap.xml  tasks.py  test_results.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/gh-action-setup-poetry-environment/: action.yml
.github/workflows/: ci.yml  release.yml
admin/install/: index.html
admin/release_notes/: index.html
admin/release_notes/version_0.2/: index.html
admin/release_notes/version_0.9/: index.html
admin/uninstall/: index.html
admin/upgrade/: index.html
dev/contributing/: index.html
dev/design/: index.html
dev/dev_environment/: index.html
dev/extending/: index.html
development/: Dockerfile  configuration.py  creds.example.env  dev.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.redis.yml  entrypoint.sh
development/backup/: killsessions.sql  test_db.sql
development/data/: fred.json  netbox.sql  seed.json  somedata.json
development/scripts/.githooks/: pre-commit
docs/: docker-compose.yml  index.md
docs/admin/: install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.2.2.md  version_0.2.md  version_0.9.md
docs/dev/: contributing.md  design.md  dev_environment.md  extending.md
docs/user/: app_overview.md
netbox_device_groups/: __init__.py  choices.py  filtersets.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_device_groups/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_device_groups/core/models/: __init__.py
netbox_device_groups/forms/: __init__.py  bulk_edit.py  bulk_import.py  filtersets.py  model_forms.py
netbox_device_groups/graphql/: schema.py  types.py
netbox_device_groups/migrations/: 0001_initial.py  0002_rename_cluster_type_devicegroup_device_group_type.py
netbox_device_groups/models/: __init__.py  device_group.py  device_group_type.py  physical_cluster.py
netbox_device_groups/templates/netbox_device_groups/: cluster_add_devices.html  devicegroup.html  devicegroup_add_devices.html  devicegrouptype.html
netbox_device_groups/templates/netbox_device_groups/device_group/: base.html  devices.html
netbox_device_groups/templates/netbox_physical_clusters/: physicalcluster.html
netbox_device_groups/templates/netbox_physical_clusters/physical_cluster/: base.html
netbox_device_groups/tests/: test_filtersets.py  test_forms.py  test_models.py  test_views.py
netbox_physical_clusters/: __init__.py  choices.py  filtersets.py  navigation.py  search.py  tables.py  urls.py  views.py
netbox_physical_clusters/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_physical_clusters/forms/: bulk_edit.py  bulk_import.py  filtersets.py  model_forms.py
netbox_physical_clusters/graphql/: schema.py  types.py
netbox_physical_clusters/migrations/: 0001_initial.py  0002_physicalcluster_and_more.py  0003_physicalcluster_devices_physicalcluster_primary_ip4.py
netbox_physical_clusters/models/: __init__.py  physical_cluster.py  physical_cluster_type.py
netbox_physical_clusters/templates/netbox_physical_clusters/: physicalcluster.html  physicalclustertype.html
netbox_physical_clusters/templates/netbox_physical_clusters/physical_cluster/: base.html  devices.html
netbox_physical_clusters/tests/: test_filtersets.py  test_forms.py  test_graphql.py  test_models.py  test_views.py
netbox_plugin_extended_clusters/: __init__.py  choices.py  filtersets.py  navigation.py  serializers.py  tables.py  urls.py  views.py
netbox_plugin_extended_clusters/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_plugin_extended_clusters/migrations/: 0001_initial.py  0002_customclustertype.py
netbox_plugin_extended_clusters/models/: __init__.py  access_list_rules.py  access_lists.py  extended_cluster_types.py  extended_clusters.py
netbox_plugin_extended_clusters/templates/netbox_plugin_extended_clusters/: accesslist.html
netbox_plugin_extended_clusters/tests/: test_api.py  test_models.py
search/: search_index.json
user/app_getting_started/: index.html
user/app_overview/: index.html
user/app_use_cases/: index.html
