[tool.poetry]
name = "netbox-plugin-extended-clusters"
version = "0.1.0"
description = ""
authors = ["Pat McLean <patrick.mclean@sap.com>", "The Fail Druid <faildruid@ahra.ie"]
readme = "README.md"


packages = [
    {include = "netbox_plugin_extended_clusters"},
]


[tool.poetry.dependencies]
python = "^3.10"
bleach = "6.0.0"
boto3 = "1.28.26"
django = "4.2.5"
django-cors-headers = "4.2.0"
django-debug-toolbar = "4.2.0"
django-filter = "23.2"
django-graphiql-debug-toolbar = "0.2.0"
django-mptt = "0.14"
django-pglocks = "1.0.4"
django-prometheus = "2.3.1"
django-redis = "5.3.0"
django-rich = "1.7.0"
django-rq = "2.8.1"
django-tables2 = "2.6.0"
django-taggit = "4.0.0"
django-timezone-field = "6.0"
djangorestframework = "3.14.0"
drf-spectacular = "0.26.4"
drf-spectacular-sidecar = "2023.9.1"
dulwich = "0.21.5"
feedparser = "6.0.10"
graphene-django = "3.0.0"
gunicorn = "21.2.0"
jinja2 = "3.1.2"
markdown = "3.3.7"
netaddr = "0.8.0"
pillow = "10.0.0"
psycopg = {version = "3.1.10", extras = ["binary", "pool"]}
pyyaml = "6.0.1"
sentry-sdk = "1.30.0"
social-auth-app-django = "5.3.0"
social-auth-core = {version = "4.4.2", extras = ["openidconnect"]}
svgwrite = "1.4.3"
tablib = "3.5.0"
tzdata = "2023.3"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
black = "^23.7.0"
coverage = "^7.3.0"
flake8 = "^6.1.0"
mkdocs = "1.5.2"
mkdocstrings = {version = "0.23.0", extras = ["python-legacy"]}
mkdocs-autorefs = "0.5.0"
mkdocs-material = "9.2.7"
mkdocs-material-extensions = "1.1.1"
yamllint = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tasks.py     # This is where you define files that should not be stylized by black
                    # the root of the project
)
'''


[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!(__init__|tasks)).*\\.py"
match_dir = "^(?!(\\..*|venv|\\.venv|tests|migrations|development)).*"
add_ignore = "D212,D106"
