[tool.poetry]
name = "netbox-device-groups"
version = "0.2.1"
authors = ["Pat McLean <patrick.mclean@sap.com>", "The Fail Druid <faildruid@ahra.ie"]
readme = "README.md"
keywords = ["Netbox", "netbox", "plugin"]
description = "A netbox plugin for managing multiple device group types"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/sapcc/netbox-device-groups"
documentation = "https://sapcc.github.io/netbox-device-groups"


packages = [
    {include = "netbox_device_groups"},
]


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
bleach = "6.1.0"
django = "4.2.11"
django-cors-headers = "4.3.1"
django-debug-toolbar = "4.3.0"
django-filter = "24.1"
django-graphiql-debug-toolbar = "0.2.0"
django-mptt = "0.14.0"
django-pglocks = "1.0.4"
django-prometheus = "2.3.1"
django-redis = "5.4.0"
django-rich = "1.8.0"
django-rq = "2.10.1"
django-taggit = "5.0.1"
django-tables2 = "2.7.0"
django-timezone-field = "6.1.0"
djangorestframework = "3.14.0"
drf-spectacular = "0.27.1"
drf-spectacular-sidecar = "2024.3.4"
feedparser = "6.0.11"
graphene-django = "3.0.0"
gunicorn = "21.2.0"
jinja2 = "3.1.3"
markdown = "3.5.2"
mkdocs-material = "9.5.13"
mkdocstrings = {version = "0.24.1", extras = ["python-legacy"]}
netaddr = "1.2.1"
pillow = "10.2.0"
psycopg = {version = "3.1.18", extras = ["binary", "pool"]}
pyyaml = "6.0.1"
requests = "2.31.0"
social-auth-app-django = "5.4.0"
social-auth-core = {version = "4.5.3", extras = ["openidconnect"]}
svgwrite = "1.4.3"
tablib = "3.5.0"
tzdata = "2024.1"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119          # Github View Window Width
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \development
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
  | tasks.py     # This is where you define files that should not be stylized by black
                 # the root of the project
)
'''

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!(__init__|tasks)).*\\.py"
match_dir = "^(?!(\\..*|venv|\\.venv|tests|migrations|development)).*"
add_ignore = "D212,D106"
